k8s/stateful-set-central.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-lib-svc
  labels:
    app: central-lib
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: central-lib
  selector:
    app: central-lib
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: central-lib
spec:
  selector:
    matchLabels:
      app: central-lib
  serviceName: "central-lib"
  replicas: 1
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: central-lib
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: central-lib
          image: rruzicic1/lib-central
          ports:
            - containerPort: 8080
              name: central-lib
        - name: central-db
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: central-db
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 50M
