k8s/stateful-set-ni.yaml
apiVersion: v1
kind: Service
metadata:
  name: ni-lib-svc
  labels:
    app: ni-lib
spec:
  type: NodePort
  ports:
    - nodePort: 31038
      port: 80
      protocol: TCP
      targetPort: 8080
      name: ni-lib
  selector:
    app: ni-lib
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ni-lib
spec:
  selector:
    matchLabels:
      app: ni-lib
  serviceName: "ni-lib"
  replicas: 1
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ni-lib
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: ni-lib
          image: rruzicic1/lib-city
          ports:
            - containerPort: 8080
              name: ni-lib
        - name: ni-db
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: ni-db
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 50M
